--- a/assets/sass/_functions.sass
+++ b/assets/sass/_functions.sass
@@ -10,3 +10,10 @@
   animation: $animation
   -webkit-animation: $animation
   -moz-animation: $animation
+
+=multiline-truncate($lines:5)
+  display: -webkit-box
+  overflow: hidden
+  -webkit-line-clamp: $lines
+  -webkit-box-orient: vertical
+  text-overflow: -o-ellipsis-lastline
